manifests/cilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: hubble-ingress
 namespace: kube-system
 annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    nginx.ingress.kubernetes.io/auth-url: |-
        http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
        https://hubble.lan.ccrow.org/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
        Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;

    # nginx.org/ssl-services: "hubble"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
 ingressClassName: nginx
 tls:
 - hosts:
   - hubble.lan.ccrow.org
   secretName: hubble-tls-secret
 rules:
 - host: hubble.lan.ccrow.org
   http:
     paths:
     - backend:
         service:
           name: hubble-ui
           port:
             number: 80
       path: /
       pathType: Prefix
